@@ -189,7 +189,7 @@ $_lang['goodnews.subscriber_fullname']                              = 'Vollst&au
 $_lang['goodnews.subscriber_email']                                 = 'Email Adresse';
 $_lang['goodnews.subscriber_mailing_groups']                        = 'Mailing Gruppen';
 $_lang['goodnews.subscriber_mailing_categories']                    = 'Mailing Kategorien';
-$_lang['goodnews.subscriber_created_on']                            = 'Erstellt am';
+$_lang['goodnews.subscriber_subscribed_on']                         = 'Abonnent seit';
 $_lang['goodnews.subscriber_active']                                = 'Aktiv';
 $_lang['goodnews.subscriber_testdummy']                             = 'Tester';
 $_lang['goodnews.subscriber_ip']                                    = 'IP Adresse';
