@@ -189,7 +189,7 @@ $_lang['goodnews.subscriber_fullname']                              = 'Full name
 $_lang['goodnews.subscriber_email']                                 = 'Email';
 $_lang['goodnews.subscriber_mailing_groups']                        = 'Mailing Groups';
 $_lang['goodnews.subscriber_mailing_categories']                    = 'Mailing Categories';
-$_lang['goodnews.subscriber_created_on']                            = 'Created on';
+$_lang['goodnews.subscriber_subscribed_on']                         = 'Subscriber since';
 $_lang['goodnews.subscriber_active']                                = 'Active';
 $_lang['goodnews.subscriber_testdummy']                             = 'Tester';
 $_lang['goodnews.subscriber_ip']                                    = 'IP Address';
