@@ -189,7 +189,7 @@ $_lang['goodnews.subscriber_fullname']                              = 'Nom compl
 $_lang['goodnews.subscriber_email']                                 = 'Email';
 $_lang['goodnews.subscriber_mailing_groups']                        = 'Groupes de Mailing';
 $_lang['goodnews.subscriber_mailing_categories']                    = 'Catégories de Mailing';
-$_lang['goodnews.subscriber_created_on']                            = 'Créée le';
+$_lang['goodnews.subscriber_subscribed_on']                         = 'Subscriber since';
 $_lang['goodnews.subscriber_active']                                = 'Actif';
 $_lang['goodnews.subscriber_testdummy']                             = 'Tester';
 $_lang['goodnews.subscriber_ip']                                    = 'Adresse IP';
