@@ -1,5 +1,6 @@
 Changelog for GoodNews
 
+- fixed subscriber "Created on" problem (conflicting field names since MODX 1.5.x users have an explicit createdon field)
 - fixed emptying cachepwd field when subscription is confirmed
 - fixed sending activation email if activationEmail property is not set
 - fixed a problem with detecting extended fields in form
